# BND_proj

./: BND.h  CMakeLists.txt  Catalog.h  CatalogUnit.h  DataUnit.h  main.cpp
dto/: BND.h  Catalog.h  CatalogUnit.h
lib/: CMakeLists.txt
src/: BND.h  CMakeLists.txt  Catalog.h  LibraryData.cpp  LibraryData.hpp  UtilsFunctions.hpp  main.cpp
src/commands/: Add.cpp  Add.hpp  BNDCommandFactory.hpp  BNDCommands.hpp  CMakeLists.txt  Delete.cpp  Delete.hpp  DeleteSection.cpp  DeleteSection.hpp  Init.cpp  Init.h  Load.cpp  Load.hpp  OutFreeSpace.cpp  OutFreeSpace.hpp  OutSectionAlphabet.cpp  OutSectionAlphabet.hpp  Print.cpp  Print.h  RenameCatalog.cpp  RenameCatalog.hpp  Reorganization.cpp  Reorganization.hpp  Save.cpp  Save.hpp
src/dto/: BND.h  Catalog.h  CatalogUnit.h
src/dtoCommands/: BNDCommand.hpp  CMakeLists.txt
src/dtoCommands/bndCommands/: BNDCommand.cpp  BNDCommand.hpp  CMakeLists.txt  Create.cpp  Create.hpp  Print.cpp  Print.hpp
src/dtoCommands/catalogCommands/: AddRecord.cpp  AddRecord.hpp  CMakeLists.txt  CatalogCommand.cpp  CatalogCommand.hpp  DecSize.cpp  DecSize.hpp  MakeNewMassive.cpp  MakeNewMassive.hpp  Print.cpp  Print.hpp  SearchRecordByName.cpp  SearchRecordByName.hpp
src/dtoCommands/catalogUnitCommands/: CMakeLists.txt  CatalogUnitCommand.cpp  CatalogUnitCommand.hpp  DeleteThisUnit.cpp  DeleteThisUnit.hpp  Print.cpp  Print.hpp
src/exceptions/: BNDCannotAddDataInDataArea.hpp  BNDImpossibleToReorganize.hpp  BNDIsEmpty.hpp  CatalodMemoryIsNotAllocated.hpp  CatalogNameTooLong.hpp  CatalogNotFound.hpp  CatalogRecordsAreEmpty.hpp  CatalogSpaceFull.hpp  CatalogSpaceUnspecified.hpp  DataAreaIsNotAllocated.hpp  FileCannotCreate.hpp  FileNotFoundException.hpp  FileWriteException.hpp  IOException.hpp  InvalidFileFormatException.hpp  LibraryDataCorruptedException.hpp  LibraryDataException.hpp  LibraryDataNotInitializedException.hpp  UnexpectedEndOfFileException.hpp
src/serializer/: BinSerializer.cpp  BinSerializer.hpp  ISerializer.hpp
test/: AddIn.txt  AddOut.txt  CMakeLists.txt  DeleteIn.txt  DeleteOut.txt  DeleteSectionIn.txt  DeleteSectionOut.txt  InitIn.txt  InitOut.txt  LoadOut.txt  OutFreeSpaceChek.txt  OutFreeSpaceIn.txt  OutSectionAlphabetChek.txt  OutSectionAlphabetIn.txt  PrintChek.txt  PrintIn.txt  PrintOut.txt  RenameCatalogIn.txt  RenameCatalogOut.txt  ReorganizationIn.txt  ReorganizationOut.txt  TestFunctions.hpp  commandFactoryTest.cpp
